keepファイル削除

--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -5,7 +5,7 @@
       = f.submit '検索'
     %hr
 
-  %p{ class: "text-end" }
+  %p{ class: "text-end mt-4" }
     = "全#{@articles.size}件"
     = link_to "新規作成", new_article_path
 
