--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,25 +1,28 @@
-.container{ class: "w-75" }
-  %div{ class: "mt-5 text-center" }
+.container.w-75
+  .mt-5.text-center
     = form_with url: articles_path, local: true, method: :get, class: "d-flex justify-content-center" do |f|
       = f.search_field :title, placeholder: 'タイトルで調べる', value: params[:title], class: "w-50 form-control me-2 d-inline"
       = f.submit '検索', class: "btn btn-outline-primary"
     %hr
 
-  %p{ class: "text-end mt-4" }
+  %p.text-end.mt-4
     = "全#{@articles.size}件"
     = link_to "新規作成", new_article_path
 
-  %table{ class: "table table-hover" }
-    %tr{ class: "table-light" }
+  %table.table.table-hover
+    %tr.table-light
       %th タイトル
       %th 説明
       %td
     - @articles.each do |article|
-      %tr{ class: "align-middle" }
+      %tr.align-middle
         %td
           = link_to article.title, article_path(article.id)
         %td
           = article.description
-        %td{ class: "text-end" }
+        %td.text-end
           = button_to '編集', edit_article_path(article.id), method: :get, class: "btn btn-success mb-1"
           = button_to '削除', article_path(article.id), method: :delete, class: "btn btn-danger"
+
+  .my-5
+    = paginate @articles
