--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -12,7 +12,7 @@
   %table.table.table-hover{ style: "table-layout: fixed;" }
     %tr.table-light
       %th.w-25 タイトル
-      %th 説明
+      %th{ style: "width: 65%;" } 説明
       %td
     - @articles.each do |article|
       %tr.align-middle
