--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -7,22 +7,17 @@
 
   %p.text-end.mt-4
     = "全#{@articles.size}件"
-    = link_to "新規作成", new_article_path
 
   %table.table.table-hover{ style: "table-layout: fixed;" }
     %tr.table-light
       %th.w-25 タイトル
       %th{ style: "width: 65%;" } 説明
-      %td
     - @articles.each do |article|
       %tr.align-middle
         %td
-          = link_to article.title, article_path(article.id)
+          = article.title
         %td
           = article.description
-        %td.text-end
-          = button_to '編集', edit_article_path(article.id), method: :get, class: "btn btn-success mb-1"
-          = button_to '削除', article_path(article.id), method: :delete, class: "btn btn-danger"
 
   .my-5
     = paginate @articles
