--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,8 +1,7 @@
 .container.w-75
-  .mt-5.text-center
-    = form_with url: articles_path, local: true, method: :get, class: "d-flex justify-content-center" do |f|
-      = f.search_field :title, placeholder: 'タイトルで調べる', value: params[:title], class: "w-50 form-control me-2 d-inline"
-      = f.submit '検索', class: "btn btn-outline-primary"
+  .mt-5
+    .w-50.mx-auto
+      = render partial: 'forms/title_query_search', locals: { path: articles_path }
     %hr
 
   %p.text-end.mt-4
