検索フォームパーシャルを削除した

--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,8 +1,10 @@
 .container.w-75
   .mt-5
     .w-50.mx-auto
-      = render partial: 'forms/title_query_search', locals: { path: articles_path }
-    %hr
+      = form_with url: articles_path, local: true, method: :get, class: "d-flex justify-content-center input-group" do |f|
+        = f.search_field :title, placeholder: 'タイトルで検索', value: params[:title], class: "form-control d-inline"
+        = image_submit_tag "search.svg", class: "input-group-text"
+  %hr
 
   %p.text-end.mt-4
     = "全#{@articles.size}件"
