タブのテキストカラーを変更した

--- a/app/views/article_drafts/index.html.haml
+++ b/app/views/article_drafts/index.html.haml
@@ -7,19 +7,19 @@
           = image_tag "search.svg"
   %hr
 
-  %p.text-end.mt-4
+  %p.text-end
     = "全#{@article_drafts_count}件"
 
   %nav
     .nav.nav-tabs.nav-fill#nav-tab{ role: "tablist" }
-      %button.nav-link.active#nav-not-apploval-tab{ "data-bs-toggle": "tab", "data-bs-target": "#nav-not-apploval", type: "button", role: "tab", "aria-controls": "nav-not-apploval", "aria-selected": "true" }
+      %button.nav-link.text-danger.active#nav-not-apploval-tab{ "data-bs-toggle": "tab", "data-bs-target": "#nav-not-apploval", type: "button", role: "tab", "aria-controls": "nav-not-apploval", "aria-selected": "true" }
         承認待ち
-      %button.nav-link#nav-apploval-tab{ "data-bs-toggle": "tab", "data-bs-target": "#nav-apploval", type: "button", role: "tab", "aria-controls": "nav-apploval", "aria-selected": "false" }
+      %button.nav-link.text-dark#nav-apploval-tab{ "data-bs-toggle": "tab", "data-bs-target": "#nav-apploval", type: "button", role: "tab", "aria-controls": "nav-apploval", "aria-selected": "false" }
         承認済み
   .tab-content#nav-tabContent
     .tab-pane.fade.show.active#nav-not-apploval{ role: "tabpanel", "aria-labelledby": "nav-not-apploval-tab" }
       %p.text-end.mt-4
-        = link_to "新規作成", new_article_draft_path
+        = link_to "新規作成", new_article_draft_path, class: "text-dark"
       %table.table.table-hover{ style: "table-layout: fixed;" }
         %tr.table-light
           %th.w-25 タイトル
